--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -51,3 +51,23 @@
     font-weight: 700;
   }
 }
+
+.greedy-nav {
+  padding-right: 45px; // Reserve space for theme toggle
+}
+
+.theme-toggle {
+  position: absolute;
+  right: 35px; // Left of hamburger (0px)
+  top: 0;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 0.5rem;
+  z-index: 20;
+  color: #333; // Default light mode color
+  
+  &:hover {
+    color: #555;
+  }
+}
